# perplexity-deepresearch

./: .gitignore  README.md  pyproject.toml
.opencode/skills/: README.md  python-coding.md  python-release.md  python-testing.md
perplexity_deep_research/: __init__.py  browser_control.py  client.py  config.py  cookies.py  exceptions.py  server.py
tests/: test_browser_control.py  test_client.py  test_cookies.py  test_integration.py  test_server.py
