[project]
name = "perplexity-deep-research"
version = "0.1.0"
description = "Perplexity Deep Research MCP server with Chrome cookie extraction and curl_cffi"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.7.0",
    "pycookiecheat>=0.8.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
perplexity-deep-research = "perplexity_deep_research.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["perplexity_deep_research"]

[tool.hatch.metadata]
allow-direct-references = true
